--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - export DOCKER_BUILDKIT=1
       - echo Logging in to Amazon ECR....
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 380404168142.dkr.ecr.us-west-2.amazonaws.com
       - echo "WORDPRESS_VERSION is $WORDPRESS_VERSION"
